--- a/index.html
+++ b/index.html
@@ -4,91 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poster Example</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
-            font-family: Arial, sans-serif;
-            color: white;
-            overflow: hidden;
-        }
-        .container {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            background: url('pubg.jpg') no-repeat center center/cover;
-        }
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px;
-        }
-        .navbar img {
-            width: 250px;
-            height: 70px;
-        }
-        .navbar .nav-links {
-            display: flex;
-            gap: 10px;
-        }
-        .navbar a {
-            color: white;
-            padding: 14px 20px;
-            text-decoration: none;
-            text-align: center;
-        }
-        .navbar a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-        .content {
-          margin: 5%;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-        }
-        .content h1 {
-          margin: 20px;
-          font-family: inherit;
-          padding-top: 30px;
-    text-align: center;
-    font-size: 120px;
-    font-weight: 900;
-    color: #fff;
-    letter-spacing: 30px;
-    position: relative;
-    line-height: 1.2;
-        }
-        .content p {
-          justify-content: left;
-            font-size: 1.5em;
-            margin: 20px 0;
-        }
-        .content .buttons {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-        }
-        .content .buttons a {
-            background: white;
-            color: black;
-            padding: 14px 20px;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="navbar">
             <img src="logo.png" alt="Logo">
             <div class="nav-links">
-                <a href="#home">Home</a>
+                <a href="index.html">Home</a>
                 <a href="#tournaments">Tournaments</a>
                 <a href="#teams">Teams</a>
                 <a href="#players">Players</a>
